[package]
name          = "dbg"
version       = "1.0.4"

description   = """dbg!(expr, ..) macro from RFC 2173 in stable Rust"""
keywords      = ["macro", "debug"]
categories    = ["development-tools::debugging"]

authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
repository    = "https://github.com/Centril/dbg"
documentation = "https://docs.rs/dbg/"
readme        = "README.md"

build         = "build.rs"

[build-dependencies]
version_check = "0.1"

[dependencies]